--- a/omnius-cha-task-manager/src/app/task-list/task-list.component.html
+++ b/omnius-cha-task-manager/src/app/task-list/task-list.component.html
@@ -1,3 +1,12 @@
-<p>
-  task-list works!
-</p>
+<div class="container">
+  <div class="row">
+    <div class="card" style="width: 18rem;" *ngFor="let task of tasks">
+      <div class="card-body">
+        <h5 class="card-title">{{task.title}}</h5>
+        <p class="card-text">{{task.description}}</p>
+        <a [routerLink]="['/task', task.uuid, 'edit']" class="card-link">edit</a>
+        <a ngClick="resolveTask(task)" class="card-link">edit</a>
+      </div>
+    </div>
+  </div>
+</div>
