--- a/omnius-cha-task-manager/src/app/app.component.html
+++ b/omnius-cha-task-manager/src/app/app.component.html
@@ -1,6 +1,6 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <app-header></app-header>
-<div class="container">
+<div class="container h-100">
   <div class="row">
     <div class="col-md-12">
       <router-outlet></router-outlet>
